criando novos templates.

--- a/projeto/templates/listar_amazonia.html
+++ b/projeto/templates/listar_amazonia.html
@@ -13,7 +13,7 @@
 <body style="background-color: #e4e4e4ce;">
 {% if request.user.is_authenticated %}
      <div class = "col-8 m-auto pt-2 pb-2 text-center">
-         <h2 class="topo">PROPRIEDADES REGISTRADAS</h2>
+         <h2 class="topo">DADOS DA AMAZONIA</h2>
         <form method = "get">
             <input type="text" id="search" name="search" class="form-control" placeholder="Buscar">
         </form>
