--- a/projeto/templates/listar_caatinga.html
+++ b/projeto/templates/listar_caatinga.html
@@ -1,10 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'menu.html' %}
+{% load static %}
+{% block title%}Edição, visualização e exlusão de dados{% endblock %}
+{% block body%}
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Mapeamento de cultura perene</title>
+    <link rel="stylesheet" href="{% static 'css/indexpropried.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: #e4e4e4ce;">
+{% if request.user.is_authenticated %}
+     <div class = "col-8 m-auto pt-2 pb-2 text-center">
+         <h2 class="topo">DADOS DO CERRADO</h2>
+        <form method = "get">
+            <input type="text" id="search" name="search" class="form-control" placeholder="Buscar">
+        </form>
+    </div>
 
+    <table class="table table-striped table-ligth" id="myTable">
+
+            <thead class="thead-ligth">
+                  <tr class="table-ligth">
+                    <th scope="col">Máxima</th>
+                    <th scope="col">Média</th>
+                    <th scope="col">Mínima</th>
+                    <th scope="col">Ano</th>
+                    <th scope="col">Janeiro</th>
+                    <th scope="col">Fevereiro</th>
+                    <th scope="col">Março</th>
+                    <th scope="col">Abril</th>
+                    <th scope="col">Maio</th>
+                    <th scope="col">Junho</th>
+                    <th scope="col">Julho</th>
+                    <th scope="col">Agosto</th>
+                    <th scope="col">Setembro</th>
+                    <th scope="col">Outubro</th>
+                    <th scope="col">Novembro</th>
+                    <th scope="col">Dezembro</th>
+                    <th scope="col">Total</th>
+                    <th scope="col">Ações</th>
+                  </tr>
+            </thead>
+            <tbody>
+                {%for Cerrado in page.object_list %}
+
+                  <tr>
+                    <th>{{Cerrado.maxima}}</th>
+                    <td>{{Cerrado.media}}</td>
+                    <td>{{Cerrado.minima}}</td>
+                    <td>{{Cerrado.anos}}</td>
+                    <td>{{Cerrado.total}}</td>
+                    <td>{{Cerrado.janeiro}}</td>
+                    <td>{{Cerrado.fevereiro}}</td>
+                    <td>{{Cerrado.marco}}</td>
+                    <td>{{Cerrado.abril}}</td>
+                    <th>{{Cerrado.maio}}</th>
+                    <td>{{Cerrado.junho}}</td>
+                    <td>{{Cerrado.julho}}</td>
+                    <td>{{Cerrado.agosto}}</td>
+                    <td>{{Cerrado.setembro}}</td>
+                    <td>{{Cerrado.outubro}}</td>
+                    <td>{{Cerrado.novembro}}</td>
+                    <td>{{Cerrado.dezembro}}</td>
+                    <td>
+                       <a href="{% url 'delete_cerrado' Cerrado.id %}" class="btn btn-danger" onclick="return confirm('Deseja mesmo apagar este item?')"> Deletar </a>
+                    </td>
+                  </tr>
+                {%endfor%}
+          </tbody>
+        </table>
+
+        <div class="page">
+            {% if page.has_previous %}
+                <a class="page" href="{% url 'listar_cerrado' %}?page={{page.previous_page_number}}">Anterior</a>
+            {% endif %}
+            {% if page.has_next %}
+                <a class="page" href="{% url 'listar_cerrado' %}?page={{page.next_page_number}}">Próximo</a>
+            {% endif %}
+        </div>
 </body>
 </html>
+{% endblock %}
